Added statistics routes.
