# src/routers/rooms-router.ts
@@ -5,14 +5,22 @@ import { Room, Session } from "@prisma/client"
 import {
   RoomGetRequest,
   RoomIdGetRequest,
+  RoomIdSatisticsRequest,
   roomGetValidator,
+  roomIdGetStatisticsValidator,
   roomIdGetValidator,
 } from "../validators/rooms-validator"
 import Joi from "joi"
 import { generateValidationErrorMessage } from "../errors/generate-validation-message"
 import { handleError } from "../errors/handle-error"
+import { DEFAULT_CONFIG } from "../config"
 
 export const roomsRouter = Router()
+
+interface SessionTicketCount {
+  session: Session
+  usedTickets: number
+}
 
 roomsRouter.get("/", authMiddleware, async (req: Request, res: Response) => {
   const validation: Joi.ValidationResult<RoomGetRequest> =
@@ -23,8 +31,8 @@ roomsRouter.get("/", authMiddleware, async (req: Request, res: Response) => {
     })
   }
   try {
-    const limit: number = validation.value.limit ?? 10
-    const page: number = validation.value.page ?? 0
+    const limit: number = validation.value.limit ?? DEFAULT_CONFIG.LIMIT
+    const page: number = validation.value.page ?? DEFAULT_CONFIG.PAGE
     const rooms: Room[] | null = await prisma.room.findMany({
       where: { maintenance: false },
       take: limit,
@@ -63,6 +71,41 @@ roomsRouter.get(
     }
   }
 )
+
+roomsRouter.get("/:number/statistics", async (req: Request, res: Response) => {
+  const validation: Joi.ValidationResult<RoomIdSatisticsRequest> =
+    roomIdGetStatisticsValidator.validate({ ...req.params, ...req.query })
+  if (validation.error) {
+    return res.status(400).send({
+      errors: generateValidationErrorMessage(validation.error.details),
+    })
+  }
+  try {
+    const limit: number = validation.value.limit ?? DEFAULT_CONFIG.LIMIT
+    const page: number = validation.value.page ?? DEFAULT_CONFIG.PAGE
+    let sessionTicketCounts: SessionTicketCount[] = []
+    const sessions: Session[] = await prisma.session.findMany({
+      where: {
+        startAt: {
+          gte: validation.value.startAt,
+          lte: validation.value.endAt,
+        },
+        roomId: validation.value.number,
+      },
+      take: limit,
+      skip: page * limit,
+    })
+    for (const session of sessions) {
+      const usedTickets: number = await prisma.ticket.count({
+        where: { sessionId: session.id, used: true },
+      })
+      sessionTicketCounts.push({ session, usedTickets })
+    }
+    res.status(200).send(sessionTicketCounts)
+  } catch (error) {
+    await handleError(error, res)
+  }
+})
 
 roomsRouter.get("/:number/sessions", async (req: Request, res: Response) => {
   const validation: Joi.ValidationResult<RoomIdGetRequest> =
